--- a/static/src/styles/landing/LandingUpdateFeed.styl
+++ b/static/src/styles/landing/LandingUpdateFeed.styl
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
   align-items: stretch;
   padding: grid(1) grid(3) grid(3) grid(3);
 }
@@ -13,7 +12,8 @@
 
 .LandingUpdateFeed__item {
   padding: grid(1);
-  flex-basis: 25%;
+  display: flex;
+  width: 25%;
 }
 
 @media screen and (max-width: 1200px) {
